<resources>
    <string name="app_name">Synthesizer</string>
    <string name="howdy">waddup man</string>
    <string name="alive">test</string>
    <string name="challenge1Button">Challenge 1</string>
    <string name="challenge3Button">Challenge 3</string>
    <string name="challenge5Button">Challenge 5</string>
    <string name="challenge8Button">Challenge 8</string>
    <string name="challenge9Button">Challenge 9</string>
<<<<<<< HEAD

    <string name="pageSwitch">Switch Pages</string>

    <string name="addToList">Add to sequence</string>
    <string name="playSequence">Play sequence</string>
    <string name="clearSequence">Clear sequence</string>
=======
>>>>>>> origin/master

    <string name="aButton">A</string>
    <string name="bButton">B</string>
    <string name="bbButton">BB gun</string>
    <string name="cButton">C</string>
    <string name="csButton">CSi</string>
    <string name="dButton">D</string>
    <string name="dsButton">nintendo DS</string>
    <string name="eButton">E</string>
    <string name="fButton">F</string>
    <string name="fsButton">FS</string>
    <string name="gButton">G</string>
    <string name="gsButton">GS</string>
    <string name="higheButton">HIGH E</string>
    <string name="highfButton">HIGH F</string>
    <string name="highfsButton">HIGH FS</string>
    <string name="highgButton">HIGH G</string>
</resources>
